--- a/index.html
+++ b/index.html
@@ -69,15 +69,22 @@
     }
 
     function getContext() {
+      document.getElementById("type").append(liff.getContext().type)
+      document.getElementById("viewType").append(liff.getContext().viewType)
+      document.getElementById("utouId").append(liff.getContext().utouId)
+      document.getElementById("roomId").append(liff.getContext().roomId)
+      document.getElementById("groupId").append(liff.getContext().groupId)
     }
 
     async function getUserProfile() {
-    const profile = await liff.getUserProfile() 
+    const profile = await liff.getProfile() 
     document.getElementById("pictureUrl").src = profile.pictureUrl
     document.getElementById("userId").append(profile.userId)
     document.getElementById("statsMessage").append(profile.statusMessage)
     document.getElementById("displayName").append(profile.displayName)
-    
+
+    //document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
+
     }
 
     function getEnvironment() {
@@ -102,7 +109,7 @@
       await liff.init({ liffId: "2004841069-VbQmne5P" })
        getEnvironment()
        getUserProfile()
-      // getContext()
+       getContext()
       // getFriendship()
       // createUniversalLink()
     }
