--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     }
 
     function logOut() {
+      liff.logOut()
+      window.location.reload()
 
     }
 
@@ -119,13 +121,12 @@
     }
 
     async function getUserProfile() {
-
-    const profile = await liff.getProfile()
-
-    document.getElementById("pictureUrl").src = profile.pictureUrl
-    document.getElementById("userId").append(profile.userId)
-    document.getElementById("statsMessage").append(profile.statusMessage)
-    document.getElementById("displayName").append(profile.displayName)
+      const profile = await liff.getProfile()
+      document.getElementById("pictureUrl").src = profile.pictureUrl
+      document.getElementById("userId").append(profile.userId)
+      document.getElementById("statusMessage").append(profile.statusMessage)
+      document.getElementById("displayName").append(profile.displayName)
+     // document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
 
 
     }
