--- a/index.html
+++ b/index.html
@@ -54,190 +54,147 @@
 
     async function shareMsg() {
       await liff.shareTargetPicker([
+      {
+  "type": "flex",
+  "altText": "FIFA Home",
+  "contents": {
+    "type": "bubble",
+    "header": {
+      "type": "box",
+      "layout": "vertical",
+      "contents": [
         {
-          type:"flex",
-      altText:"Flex Message from Share Target Picker",
-      contents: {
-  "type": "carousel",
-  "contents": [
-    {
-      "type": "bubble",
-      "hero": {
-        "type": "image",
-        "size": "full",
-        "aspectRatio": "20:13",
-        "aspectMode": "cover",
-        "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/01_5_carousel.png"
-      },
-      "body": {
-        "type": "box",
-        "layout": "vertical",
-        "spacing": "sm",
-        "contents": [
-          {
-            "type": "text",
-            "text": "Arm Chair, White",
-            "wrap": true,
-            "weight": "bold",
-            "size": "xl"
-          },
-          {
-            "type": "box",
-            "layout": "baseline",
-            "contents": [
-              {
-                "type": "text",
-                "text": "$49",
-                "wrap": true,
-                "weight": "bold",
-                "size": "xl",
-                "flex": 0
-              },
-              {
-                "type": "text",
-                "text": ".99",
-                "wrap": true,
-                "weight": "bold",
-                "size": "sm",
-                "flex": 0
-              }
-            ]
-          }
-        ]
-      },
-      "footer": {
-        "type": "box",
-        "layout": "vertical",
-        "spacing": "sm",
-        "contents": [
-          {
-            "type": "button",
-            "style": "primary",
-            "action": {
-              "type": "uri",
-              "label": "Add to Cart",
-              "uri": "https://linecorp.com"
-            }
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "label": "Add to wishlist",
-              "uri": "https://linecorp.com"
-            }
-          }
-        ]
-      }
+          "type": "text",
+          "text": "FIFA World Cup 2018",
+          "size": "xl",
+          "weight": "bold"
+        }
+      ]
     },
-    {
-      "type": "bubble",
-      "hero": {
-        "type": "image",
-        "size": "full",
-        "aspectRatio": "20:13",
-        "aspectMode": "cover",
-        "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/01_6_carousel.png"
-      },
-      "body": {
-        "type": "box",
-        "layout": "vertical",
-        "spacing": "sm",
-        "contents": [
-          {
-            "type": "text",
-            "text": "Metal Desk Lamp",
-            "wrap": true,
-            "weight": "bold",
-            "size": "xl"
-          },
-          {
-            "type": "box",
-            "layout": "baseline",
-            "flex": 1,
-            "contents": [
-              {
-                "type": "text",
-                "text": "$11",
-                "wrap": true,
-                "weight": "bold",
-                "size": "xl",
-                "flex": 0
-              },
-              {
-                "type": "text",
-                "text": ".99",
-                "wrap": true,
-                "weight": "bold",
-                "size": "sm",
-                "flex": 0
-              }
-            ]
-          },
-          {
-            "type": "text",
-            "text": "Temporarily out of stock",
-            "wrap": true,
-            "size": "xxs",
-            "margin": "md",
-            "color": "#ff5551",
-            "flex": 0
-          }
-        ]
-      },
-      "footer": {
-        "type": "box",
-        "layout": "vertical",
-        "spacing": "sm",
-        "contents": [
-          {
-            "type": "button",
-            "flex": 2,
-            "style": "primary",
-            "color": "#aaaaaa",
-            "action": {
-              "type": "uri",
-              "label": "Add to Cart",
-              "uri": "https://linecorp.com"
-            }
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "label": "Add to wish list",
-              "uri": "https://linecorp.com"
-            }
-          }
-        ]
-      }
+    "hero": {
+      "type": "image",
+      "url": "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRlMelZEBAS_l6RmHoy2wSOf7cLkCFY1oJQdQQdhRyC-JvVJTqb",
+      "size": "full",
+      "aspectRatio": "20:13",
+      "aspectMode": "cover"
     },
-    {
-      "type": "bubble",
-      "body": {
-        "type": "box",
-        "layout": "vertical",
-        "spacing": "sm",
-        "contents": [
-          {
-            "type": "button",
-            "flex": 1,
-            "gravity": "center",
-            "action": {
-              "type": "uri",
-              "label": "See more",
-              "uri": "https://linecorp.com"
+    "body": {
+      "type": "box",
+      "layout": "vertical",
+      "spacing": "md",
+      "contents": [
+        {
+          "type": "box",
+          "layout": "horizontal",
+          "spacing": "sm",
+          "contents": [
+            {
+              "type": "text",
+              "text": "LIVE !",
+              "size": "lg",
+              "color": "#555555",
+              "weight": "bold",
+              "align": "center"
             }
+          ]
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "action": {
+            "type": "postback",
+            "label": "Portugal  1 : 0  Morocco",
+            "displayText": "Live Report !!",
+            "data": "LIVE"
           }
-        ]
-      }
+        },
+        {
+          "type": "separator",
+          "margin": "lg"
+        },
+        {
+          "type": "box",
+          "layout": "vertical",
+          "margin": "lg",
+          "spacing": "sm",
+          "contents": [
+            {
+              "type": "box",
+              "layout": "horizontal",
+              "spacing": "sm",
+              "contents": [
+                {
+                  "type": "button",
+                  "style": "primary",
+                  "action": {
+                    "type": "postback",
+                    "label": "Last Match",
+                    "displayText": "Last Match",
+                    "data": "LAST"
+                  }
+                },
+                {
+                  "type": "button",
+                  "style": "primary",
+                  "action": {
+                    "type": "postback",
+                    "label": "Next Match",
+                    "displayText": "Next Match",
+                    "data": "NEXT"
+                  }
+                }
+              ]
+            },
+            {
+              "type": "box",
+              "layout": "horizontal",
+              "spacing": "sm",
+              "contents": [
+                {
+                  "type": "button",
+                  "style": "primary",
+                  "action": {
+                    "type": "postback",
+                    "label": "Schedule",
+                    "displayText": "Schedule",
+                    "data": "SCHEDULE"
+                  }
+                },
+                {
+                  "type": "button",
+                  "style": "primary",
+                  "action": {
+                    "type": "postback",
+                    "label": "Table",
+                    "displayText": "Table",
+                    "data": "TABLE"
+                  }
+                }
+              ]
+            }
+          ]
+        }
+      ]
+    },
+    "footer": {
+      "type": "box",
+      "layout": "vertical",
+      "contents": [
+        {
+          "type": "button",
+          "margin": "sm",
+          "action": {
+            "type": "uri",
+            "label": "View Source",
+            "uri": "https://sitthi.me/downloaded/ba5f784d837540dfb40df2d531d7519c.json"
+          },
+          "style": "secondary"
+        }
+      ]
     }
-  ]
+  }
 }
      
-    
- 
-        }
       ])
     }
 
