--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       await liff.shareTargetPicker([
       {
   "type": "flex",
-  "altText": "FIFA Home",
+  "altText": "RECEIPT",
   "contents": 
   {
   "type": "bubble",
@@ -887,8 +887,21 @@
   }
 }
     }
-     
       ])
+      if (result) {
+        alert(`[${result.status}] Message sent!`)
+      } else {
+        const [majorVer, minorVer, patchVer] = (liff.getLineVersion() || "").split('.');
+
+        if (minorVer === undefined) {
+          alert('ShareTargetPicker was canceled in external browser')
+          return
+        }
+
+        if (parseInt(majorVer) >= 10 && parseInt(minorVer) >= 10 && parseInt(patchVer) > 0) {
+          alert('ShareTargetPicker was canceled in LINE app')
+        }
+      }
     }
 
     function logOut() {
